--- a/index.html
+++ b/index.html
@@ -5,9 +5,70 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
-  <title>SecureTrip - 読み込み中</title>
+  <title>SecureTrip - index</title>
+  <link rel="stylesheet" href="intro.css">
 </head>
 <body>
-  <p>Redirecting to <a href="intro.html">intro.html</a>...</p>
+  <!-- ヘッダー -->
+  <div id="header-container"></div>
+  <main class="main-content">
+
+    <!-- サイト紹介 -->
+    <section id="site-intro">
+      <h2>「防災」×「観光」</h2>
+      <p>
+        旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。<br>
+        楽しい旅行の計画に、<strong>もしも</strong>の備えを。<br>
+      </p>
+      <img src="assets/31203263_s.jpg" alt="飛行機" class="intro-image">
+    </section>
+
+    <!-- 課題と解決策 -->
+    <section id="problem-sokution">
+      <h2>防災はなぜ必要？</h2>
+      <p>
+        忙しい日常の中で、防災はつい後回しになりがち。<br>
+        でも、本当に守りたいものは、日常の「当たり前」の暮らし。<br>
+        だからこそ、私たちは防災をもっと<storong>"自然な習慣"</storong>にする必要がある。
+      </p>
+      <img src="assets/23681316_s.jpg" alt="ブランコ" class="intro-image">
+
+      <h3>「備える」はもっとスマートに</h3>
+      <p>
+        <strong>SecureTrip</strong>は、旅の楽しさをそのままに、防災を意識するきっかけを創る。<br>
+        <strong>もしも</strong>に備える力を、あなたの<strong>旅</strong>に、<strong>日常</strong>に。
+      </p>
+    </section>
+
+    <!-- 機能紹介 -->
+    <section id="feature">
+      <h3>SecureTripの主な機能</h3>
+
+      <div class="feature">
+        <h3>マップ</h3>
+        <p>
+          <strong>「観光地」</strong>だけじゃない、<strong>"防災"</strong>も見えるマップ。
+        </p>
+        <a href="map.html" class="btn-feature">マップを開く</a>
+      </div>
+
+      <div class="feature">
+        <h3>防災チェックイン</h3>
+        <p>
+          <strong>「ただ訪れる」</strong>だけじゃない、新しい観光スタイル。
+        </p>
+      </div>
+
+      <div class="feature">
+        <h3>旅行プラン提案</h3>
+        <p>
+          <strong>「今までのスポット」</strong>だけじゃない、旅のルートに新しい選択肢を。
+        </p>
+        <a href="plan.html" class="btn-feature">プランを開く</a>
+      </div>
+    </section>
+  </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
