--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
     <!-- サイト紹介 -->
     <section id="site-intro">
-      <h2>「防災」×「観光」</h2>
-      <p>
+      <h2 class="fake-in-up">「防災」×「観光」</h2>
+      <p class="fade-in-delay">
         旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。<br>
         楽しい旅行の計画に、<strong>もしも</strong>の備えを。<br>
       </p>
-      <img src="assets/31203263_s.jpg" alt="飛行機" class="intro-image">
+      <img src="assets/31203263_s.jpg" alt="飛行機" class="intro-image fade-in-zoom">
     </section>
 
     <!-- 課題と解決策 -->
