--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <main class="main-content">
 
     <!-- サイト紹介 -->
-    <section id="site-intro">
-      <h2 class="fake-in-up">「防災」×「観光」</h2>
+    <section id="site-intro" class="fade-in-section">
+      <h2 class="fade-in-up">「防災」×「観光」</h2>
       <p class="fade-in-delay">
         旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。<br>
         楽しい旅行の計画に、<strong>もしも</strong>の備えを。<br>
