--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
   <title>SecureTrip - index</title>
   <link rel="stylesheet" href="intro.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- ヘッダー -->
@@ -66,7 +67,6 @@
         <a href="plan.html" class="btn-feature">プランを開く</a>
       </div>
     </section>
-    <script src="script.js"></script>
   </main>
 </body>
 </html>
