--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="theme-color" content="#0082CA"> <!-- ステータスバーの背景色を指定 -->
   <title>SecureTrip - index</title>
   <link rel="stylesheet" href="intro.css">
-  <script src="script.js" defer></script>
 </head>
 <body>
   <!-- ヘッダー -->
@@ -68,5 +67,6 @@
       </div>
     </section>
   </main>
+  <script src="script.js"></script>
 </body>
 </html>
