--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </div>
     </section>
   </main>
+  <script src="animation.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
