--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <!-- サイト紹介 -->
     <section id="site-intro" class="fade-in-section">
-      <h2 class="fade-in-up">「防災」×「観光」</h2>
+      <div class="all_border_title">
+        <h2 class="fade-in-up title">「防災」×「観光」</h2>
+        <div class="all_square_anime">
+          <span class="_left_top_to_right"></span>
+          <span class="_left_top_to_bottom"></span>
+          <span class="_right_bottom_to_left"></span>
+          <span class="_right_bottom_to_top"></span>
+        </div>
+      </div>
       <p class="fade-in-delay">
         旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。<br>
         楽しい旅行の計画に、<strong>もしも</strong>の備えを。<br>
