--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         旅をもっと<strong>豊かに</strong>、日常をもっと<strong>安全に</strong>。<br>
         楽しい旅行の計画に、<strong>もしも</strong>の備えを。<br>
       </p>
+      <div id="scroll-down">
+        <span class="arrow-down"></span>
+        <span id="scroll-title">Scroll Down</span>
+      </div>
     </section>
 
     <!-- 課題と解決策 -->
