--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </section>
 
     <!-- 課題と解決策 -->
-    <section id="problem-sokution">
+    <section id="problem-solution">
       <h2>防災はなぜ必要？</h2>
       <p>
         忙しい日常の中で、防災はつい後回しになりがち。<br>
