--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
 
     <!-- 課題と解決策 -->
     <section id="problem-solution">
-      <h2>防災はなぜ必要？</h2>
+      <h2>
+        <span class="title-span">防災はなぜ必要？</span>
+      </h2>
       <p>
         忙しい日常の中で、防災はつい後回しになりがち。<br>
         でも、本当に守りたいものは、日常の「当たり前」の暮らし。<br>
-        だからこそ、私たちは防災をもっと<storong>"自然な習慣"</storong>にする必要がある。
+        だからこそ、私たちは防災をもっと<strong>"自然な習慣"</strong>にする必要がある。
       </p>
       <img src="assets/23681316_s.jpg" alt="ブランコ" class="intro-image">
 
