--- a/index.html
+++ b/index.html
@@ -39,9 +39,12 @@
         <span class="title-span">防災はなぜ必要？</span>
       </h2>
       <p>
-        忙しい日常の中で、防災はつい後回しになりがち。<br>
-        でも、本当に守りたいものは、日常の「当たり前」の暮らし。<br>
-        だからこそ、私たちは防災をもっと<strong>"自然な習慣"</strong>にする必要がある。
+        忙しい日常の中で、<br>
+        防災はつい後回しになりがち。<br>
+        でも、本当に守りたいものは、<br>
+        日常の「当たり前」の暮らし。<br>
+        だからこそ、私たちは<br>
+        防災をもっと<strong>"自然な習慣"</strong>にする必要がある。
       </p>
       <img src="assets/23681316_s.jpg" alt="ブランコ" class="intro-image">
 
