--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
         防災をもっと<strong>"自然な習慣"</strong>にする必要がある。
       </p>
       <img src="assets/23681316_s.jpg" alt="ブランコ" class="intro-image">
-
-      <h3>「備える」はもっとスマートに</h3>
+    </section>
+    
+    <section id="smart">
+      <h2>「備える」はもっとスマートに</h2>
       <p>
         <strong>SecureTrip</strong>は、旅の楽しさをそのままに、防災を意識するきっかけを創る。<br>
         <strong>もしも</strong>に備える力を、あなたの<strong>旅</strong>に、<strong>日常</strong>に。
