--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       </h2>
       <p>
         忙しい日常の中で、<br>
-        防災はつい<strong>後回し</strong>になりがち。<br>
+        防災はつい後回しになりがち。<br>
         でも、本当に守りたいものは、<br>
-        日常の<strong>「当たり前」</strong>の暮らし。<br>
+        日常の「当たり前」の暮らし。<br>
         だからこそ、私たちは<br>
         防災をもっと<strong>"自然な習慣"</strong>にする必要がある。
       </p>
