--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     
     <section id="smart">
-      <h3>「備える」はもっとスマートに</h3>
+      <h3><span class="underline-before">「備える」はもっとスマートに</span></h3>
       <p>
         <strong>SecureTrip</strong>は、旅の楽しさをそのままに、<br>
         防災を意識するきっかけを創る。<br>
