--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 
       <div class="feature">
         <h3>マップ</h3>
+        <img src="images/ST-map.jpg" alt="マップ画面" class="STmap-image">
         <p>
           <strong>「観光地」</strong>だけじゃない、<strong>"防災"</strong>も見えるマップ。
         </p>
@@ -72,6 +73,7 @@
 
       <div class="feature">
         <h3>防災チェックイン</h3>
+        <img src="images/ST.jpg" alt="チェックイン画面" class="ST-image">
         <p>
           <strong>「ただ訪れる」</strong>だけじゃない、新しい観光スタイル。
         </p>
@@ -79,6 +81,7 @@
 
       <div class="feature">
         <h3>旅行プラン提案</h3>
+        <img src="images/ST-plan.jpg" alt="プラン画面" class="STplan-image">
         <p>
           <strong>「今までのスポット」</strong>だけじゃない、旅のルートに新しい選択肢を。
         </p>
