--- a/index.html
+++ b/index.html
@@ -63,27 +63,28 @@
       <h3>SecureTripの主な機能</h3>
 
       <div class="feature">
-        <h3>マップ</h3>
+        <h3>マップ機能</h3>
         <img src="images/ST-map.jpg" alt="マップ画面" class="STmap-image">
         <p>
-          <strong>「観光地」</strong>だけじゃない、<strong>"防災"</strong>も見えるマップ。
+          <strong>観光地</strong>だけじゃない、<strong>"防災"</strong>も見えるマップ。
         </p>
         <a href="map.html" class="btn-feature">マップを開く</a>
       </div>
 
       <div class="feature">
-        <h3>防災チェックイン</h3>
+        <h3>防災チェックイン機能</h3>
         <img src="images/ST.jpg" alt="チェックイン画面" class="ST-image">
         <p>
-          <strong>「ただ訪れる」</strong>だけじゃない、新しい観光スタイル。
+          <strong>ただ訪れる</strong>だけじゃない、新しい観光スタイル。
         </p>
       </div>
 
       <div class="feature">
-        <h3>旅行プラン提案</h3>
+        <h3>旅行プラン提案機能</h3>
         <img src="images/ST-plan.jpg" alt="プラン画面" class="STplan-image">
         <p>
-          <strong>「今までのスポット」</strong>だけじゃない、旅のルートに新しい選択肢を。
+          <strong>今までのスポット</strong>だけじゃない、<br>
+          旅のルートに新しい選択肢を。
         </p>
         <a href="plan.html" class="btn-feature">プランを開く</a>
       </div>
