--- a/header.html
+++ b/header.html
@@ -46,8 +46,7 @@
       <li><a href="map.html">マップ</a></li>
       <li><a href="plan.html">旅行プラン</a></li>
       <li><a href="badge.html">バッジ</a></li>
-      <li><a href="about.html">ぼうそうV説明</a></li>
-      <li><a href="events.html">イベント</a></li>
+      <li><a href="index.html">ぼうそうV説明</a></li>
       <li><a href="contact.html">お問い合わせ</a></li>
     </ul>
   </div>
