--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <p>
           <strong>観光地</strong>だけじゃない、<strong>"防災"</strong>も見えるマップ。
         </p>
+        <small>このマップでは、主要な観光地と防災関連の体験ができるスポットを表示しています。また、津波や洪水のハザードマップを表示することも可能です。</small>
         <a href="map.html" class="btn-feature">マップを開く</a>
       </div>
 
