--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <script src="script.js"></script>
 <footer>
   <div class="footer-container">
-    <img src="assets/logo.png" alt="団体ロゴ" class="footer-logo">
+    <img src="assets/logo.jpg" alt="団体ロゴ" class="footer-logo">
     <p class="footer-name">学生団体BBe</p>
     <p class="footer-contact">お問い合わせ: </p>
   </div>
