--- a/index.html
+++ b/index.html
@@ -92,5 +92,12 @@
   </main>
   <script src="animation.js"></script>
   <script src="script.js"></script>
+<footer>
+  <div class="footer-container">
+    <img src="assets/logo.jpg" alt="団体ロゴ" class="footer-logo">
+    <p class="footer-name">学生団体BBe</p>
+    <p class="footer-contact">お問い合わせ: </p>
+  </div>
+</footer>
 </body>
 </html>
