--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
   </main>
   <script src="animation.js"></script>
   <script src="script.js"></script>
+<div class="footer-line"></div>
 <footer>
   <div class="footer-container">
     <img src="assets/logo.jpg" alt="団体ロゴ" class="footer-logo">
