--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="footer-container">
     <img src="assets/logo.jpg" alt="団体ロゴ" class="footer-logo">
     <p class="footer-name">学生団体BBe</p>
-    <p class="footer-contact">お問い合わせ: </p>
+    <p class="footer-contact">お問い合わせ : bosob.ehelp@gmail.com </p>
   </div>
 </footer>
 </body>
